--- a/css/pages.css
+++ b/css/pages.css
@@ -321,7 +321,6 @@ div.tabs /* See also the tabs.css file. */ {
 }
 
 #content-area /* Wrapper for the actual page content */ {
-  margin-top: 5px;
 }
 
 ul.links /* List of links */ {
